--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
     <title>One page website Bootstrap 4</title>
 
-    <!-- <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
  
   </head>
   
@@ -28,12 +28,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
-            </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
-            </li> -->
+              <a class="nav-link js-scroll-trigger" href="#features">Features</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
@@ -65,18 +62,93 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">You can do it!</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Want to feel energized and happy as can be? Start your transformation today! Develop new habits, get in shape and foucs on the right things to become healthy and successful. </p>
+            <p class="text-faded mb-4">Want to feel energized and happy as can be? Start your geek transformation today! Develop cool geeky habits, get in shape and clear your mind! </p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Tell me more!</a>
           </div>
         </div>
       </div>
     </section>
 
+    <section id="features">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <h2 class="section-heading">We've got you covered</h2>
+              <hr class="my-4">
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-3 col-md-6 text-center">
+              <div class="feature-box mt-5 mx-auto">
+                <i class="fa fa-4x fa-bug text-primary mb-3 sr-icons"></i>
+                <h3 class="mb-3">Tailored for geeks</h3>
+                <p class="text-muted mb-0">Tailored for the geek lifestyle, written by geeks for geeks.</p>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 text-center">
+              <div class="feature-box mt-5 mx-auto">
+                <i class="fa fa-4x fa-battery-full text-primary mb-3 sr-icons"></i>
+                <h3 class="mb-3">Energizing</h3>
+                <p class="text-muted mb-0">Improves both body and mind!</p>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 text-center">
+              <div class="feature-box mt-5 mx-auto">
+                <i class="fa fa-4x fa-beer text-primary mb-3 sr-icons"></i>
+                <h3 class="mb-3">Fun exercises</h3>
+                <p class="text-muted mb-0">Change your life and have fun during the process.</p>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 text-center">
+              <div class="feature-box mt-5 mx-auto">
+                <i class="fa fa-4x fa-birthday-cake  text-primary mb-3 sr-icons"></i>
+                <h3 class="mb-3">Results guaranteed</h3>
+                <p class="text-muted mb-0">Start seeing positive results already during the first week!</p>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+
+    <section class="bg-dark text-white">
+        <div class="container text-center">
+          <h2 class="mb-4">Download our free booklet!</h2>
+          <a class="btn btn-light btn-xl sr-button" href="">Download Now!</a>
+        </div>
+    </section>
+
+    <section id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading">Let's Get In Touch!</h2>
+            <hr class="my-4">
+            <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 ml-auto text-center">
+            <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
+            <p>123-456-6789</p>
+          </div>
+          <div class="col-lg-4 mr-auto text-center">
+            <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
+            <p>
+              <a href="mailto:your-email@your-domain.com">info@transforma.geek</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
- 
+    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+
   </body>
 
 </html>
