--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
             <h2 class="section-heading text-white">You can do it!</h2>
             <hr class="light my-4">
             <p class="text-faded mb-4">Want to feel energized and happy as can be? Start your geek transformation today! Develop cool geeky habits, get in shape and clear your mind! </p>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Tell me more!</a>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="#features">Tell me more!</a>
           </div>
         </div>
       </div>
